# persistent-memory

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: Alignment.rs  build.rs  lib.rs  main.rs
src/cto_pool/: Allocator.rs  CtoPool.rs  CtoPoolArc.rs  CtoPoolPathExt.rs  PMEMctopool.rs  PMEMctopoolExt.rs  Persistence.rs  PmdkError.rs  mod.rs
src/cto_pool/block_allocator/: AtomicBlockPointer.rs  Block.rs  BlockAllocator.rs  BlockMetaData.rs  BlockMetaDataItems.rs  BlockPointer.rs  BlockSize.rs  Chain.rs  ChainLength.rs  Chains.rs  FLUSH_HACKS.rs  NonNullExt.rs  RestartCopyFromAt.rs  RestartCopyIntoAt.rs  mod.rs
src/cto_pool/block_allocator/bags/: Bag.rs  BagStripe.rs  BagStripeIndex.rs  Bags.rs  (+1 more)
src/cto_pool/fetch_and_add_array_queue/: PersistentFetchAndAddArrayQueue.rs  mod.rs
src/cto_pool/free_list/: EliminationArray.rs  mod.rs
src/dax/: CouldNotObtainDaxDeviceStatisticError.rs  CouldNotObtainDeviceDaxStatisticError.rs  DaxDevicePathExt.rs  device_dax_alignment.rs  device_dax_file_statistic_string.rs  find_device_dax_region_id.rs  mod.rs
src/hyper_thread/: current_hyper_thread_index.rs  generate_hyper_thread_safe_random_usize.rs  mod.rs
src/intrinsics/: CacheLineSize.rs  clflush.rs  clflushopt.rs  clwb.rs  dc_cvac.rs  dmb_ish.rs  mod.rs  round_address_down_to_start_of_cache_line.rs  sfence.rs
src/jemalloc/: mod.rs
src/memory_map/: CouldNotMemoryMapError.rs  MMapFlags.rs  MappedMemory.rs  MemoryMapAddress.rs  OccupiedMemoryMapParseError.rs  PersistentMemoryFilePathExt.rs  find_lowest_unoccupied_address_in_process_map.rs  find_random_memory_map_unoccupied_address.rs  memory_map_page_size.rs  mod.rs
src/path/: CouldNotObtainDaxDeviceStatisticError.rs  PersistentMemoryFilePathExt.rs  mod.rs
src/persistent_memory_operations/: AtomicPersistentMemory.rs  BitAtomicPersistentMemory.rs  BoolAtomicPersistentMemory.rs  IntegerAtomicPersistentMemory.rs  locked_read_modify_write_operation_persistent_fence.rs  mod.rs  persistent_fence.rs  persistent_sync.rs  persistent_write_back.rs
