# This file is part of persistent-memory. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/persistent-memory/master/COPYRIGHT. No part of persistent-memory, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of persistent-memory. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/persistent-memory/master/COPYRIGHT.


[package]
name = "persistent-memory"
description = "Provides intrinsics for Rust to use persistent memory (pmem / NVML) without C bindings."
keywords = ["persistent", "concurrency", "memory", "DAX", "NVDIMM"]
categories = ["hardware-support", "concurrency", "memory", "data-structures"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/persistent-memory/blob/master/README.md"
homepage = "https://github.com/lemonrock/persistent-memory"
repository = "https://github.com/lemonrock/persistent-memory.git"
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "lib/**/*", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
#links = "jemalloc"
#build = "src/build.rs"
readme = "README.md"
publish = true
version = "0.0.0"

[build-dependencies]
cc = "1.0"

[dependencies]
errno = "0.2"
libc = "0.2"
parking_lot = "0.5.3"
quick-error = "1.2.0"
spin-locks = "0.0.2"
syscall-alt = "0.0.12"

[target.'cfg(not(all(target_feature = "rdrnd", any(target_arch = "x86", target_arch = "x86_64"))))'.dependencies]
rand = "0.4"

[target.'cfg(any(target_os = "android", target_os = "freebsd", target_os = "linux"))'.dependencies]
text_io = "0.1.7"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2"
winapi = "0.3"
